--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "final-react-client",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "isomorphic-fetch": "^2.2.1",
+    "lodash.omit": "^4.5.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-ga": "^2.2.0",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.72.0",
+    "tone": "^0.10.0",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "react-scripts": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
