--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash.omit": "^4.5.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.4",
     "react-ga": "^2.2.0",
     "react-redux": "^5.0.5",
