--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:3001
+REACT_APP_API_URL=http://localhost:3001/api/v1
 
 REACT_APP_API_KEY =88b8f68aa3304b9ea7f555bed50eeb87
 
