--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_API_URL=http://localhost:3001/api/v1
 
-REACT_APP_API_KEY =88b8f68aa3304b9ea7f555bed50eeb87
+REACT_APP_API_KEY=88b8f68aa3304b9ea7f555bed50eeb87
 
 REACT_APP_NYT_URL=https://api.nytimes.com/svc/topstories/v2/arts.json
