--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
+    "hoek": "^5.0.3",
     "isomorphic-fetch": "^2.2.1",
     "lodash.omit": "^4.5.0",
+    "npm": "^6.2.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.8",
