--- a/package.json
+++ b/package.json
@@ -4,32 +4,44 @@
   "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
-    "hoek": "^5.0.3",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash.omit": "^4.5.0",
-    "npm": "^6.2.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.5.4",
-    "react-ga": "^2.2.0",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.72.0",
-    "tone": "^0.10.0",
-    "uuid": "^3.1.0"
+    "hoek": "*",
+    "isomorphic-fetch": "*",
+    "lodash.omit": "*",
+    "npm": "*",
+    "prop-types": "*",
+    "react": "*",
+    "react-bootstrap": "*",
+    "react-dom": "*",
+    "react-ga": "*",
+    "react-redux": "*",
+    "react-router-dom": "*",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "*",
+    "redux-thunk": "*",
+    "semantic-ui-css": "*",
+    "semantic-ui-react": "*",
+    "tone": "*",
+    "uuid": "*"
   },
   "devDependencies": {
-    "react-scripts": "^1.0.7"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
